--- a/tcc2/editaveis/conclusao.tex
+++ b/tcc2/editaveis/conclusao.tex
@@ -3,89 +3,88 @@
 
 Neste capítulo, serão apresentadas as considerações finais sobre esse Trabalho de
 Conclusão de Curso. Serão retomados os objetivos gerais e específicos estabelecidos no
-Capítulo 1, evidenciando se os mesmos foram atingidos ou não, com justificativas. Por fim,
+Capítulo \ref{ch:intro}, evidenciando se os mesmos foram atingidos ou não, com justificativas. Por fim,
 têm-se a apresentação dos pontos de melhorias e possíveis trabalhos futuros a serem aplicados.
 
 \section{Objetivos Alcançados}
 
 O objetivo geral de desenvolver um aplicativo informativo e de recomendações de tarefas 
 com base no perfil e 
-nas fases do ciclo menstrual, no intuito de apoiar as mulheres na identificação de mudanças 
-foi concluido com a geração 
+nas fases do ciclo menstrual, no intuito de apoiar as mulheres na identificação de mudanças, 
+foi concluído com a geração 
 do aplicativo Mina.
 
-Para atingir esse objetivo geral, alguns objetivos especificos foram atendidos ao longo da tragetória de 
+Para atingir esse objetivo geral, alguns objetivos específicos foram atendidos ao longo da trajetória de 
 realização do trabalho. 
 
 A definição de um processo de coleta de dados sobre o perfil das mulheres de acordo com seus ciclos 
-menstruais foi estabelicido através de um estudo de caso de um grupo formado por 22 mulheres em idade fértil. 
-Ao final foi possível coletar o feedback de sete dessas usuárias que estiveram presentes 
+menstruais foi estabelecido através de um estudo de caso de um grupo formado por 22 mulheres em idade fértil. 
+Ao final, foi possível coletar o \emph{feedback} de sete dessas usuárias que estiveram presentes 
 desde o início da realização desse trabalho. Esse número está de acordo com o recomendado para um 
 estudo de caso citado no referencial teórico, que é de 4 a 10 pessoas. A definição de um processo de 
 análise de resultados foi estabelecido também pelo estudo de caso, gerando 
-relatórios e analises sobre os questionários aplicados.
+relatórios e análises sobre os questionários aplicados.
 
 O processo de contagem do ciclo para determinar que fase a do ciclo a mulher se encontra foi estabelecido 
-através do método do calendário e estudos sobres as fases descritos no capítulo do referencial teórico e foram 
-aplicados a lógica do código que compõe o aplicativo Mina, mais especificamente na parte de geração do calendário.
+através do método do calendário e estudos sobres as fases, descritos no Capítulo \ref{ch:referencial}. Adicionalmente, foram 
+aplicados à lógica do código que compõe o aplicativo Mina, mais especificamente na parte de geração do calendário.
 
 Tendo os processos anteriores definidos, foi possível determinar qual fase do ciclo a mulher 
-se encontra e utilizar esse dado para fazer recomendações de tarefas que podem 
-ser realizadas de forma mais fácil, neutra ou mais difícil baseado na fase do ciclo. A 
+se encontra, e utilizar esse dado para fazer recomendações de tarefas que podem 
+ser realizadas de forma mais fácil, neutra ou mais difícil, baseando-se na fase do ciclo. A 
 recomendação é gerada 
-através da inserção das usuárias em um grupo mais próximos dado pelo algoritmo de contagem de 
+através da inserção das usuárias em um grupo mais próximo, dado pelo algoritmo de contagem de 
 inversão, caracterizando esse tipo de sistema de recomendação como um sistema colaborativo.
 
-Através do desenvolvimento de uma interface e de algoritmos foi possível, então, a criaçao do 
-aplicativo Mina. Um aplicativo de recomendação de tarefas baseado nos processos definidos 
-anteriormente.
+Através do desenvolvimento de uma interface e de algoritmos, foi possível a criação do aplicativo Mina, 
+sendo esse um aplicativo de recomendação de tarefas baseado nos processos definidos anteriormente.
 
 \section{Pontos de Melhoria}
 
 Com o teste de usabilidade realizado, foi possível identificar alguns pontos de melhoria na aplicação. 
-Alguns pontos foram percebidos pela própria autora e outros elencados pelas participantes do estudo de caso. Pontos esses 
+Alguns pontos foram percebidos pela própria autora, e outros elencados pelas participantes do estudo de caso. Pontos esses 
 que devem ser levados em consideração para o aperfeiçoamento futuro do aplicativo.
 
-Como a Autora tem a intencão de tornar esse projeto um projeto \emph{Open source} as melhorias serão 
-relatadas como \emph{issues} no repositório do github.
+Como a Autora tem a intenção de tornar esse projeto um projeto \emph{Open Source} as melhorias serão 
+relatadas como \emph{issues} no repositório do github. São elas:
 
 \begin{itemize}
 
     \item Habilitar o uso do \emph{dark mode};
     \item Realizar testes com iOS;
-    \item Adicionar uma legenda explicando o signifado das cores das bolas no calendário;
-    \item Adicionar uma legenda explicando o significado dos ícones de previsão.
-    \item Adicionar um botão para sair do questionário ao tentar responde-lo novamente na tela de perfil;
+    \item Adicionar uma legenda explicando o significado das cores das bolas no calendário;
+    \item Adicionar uma legenda explicando o significado dos ícones de previsão;
+    \item Adicionar um botão para sair do questionário ao tentar respondê-lo novamente na tela de perfil;
     \item Diminuir a demora para geração e atualização das recomendações;
-    \item Adicionar um botão de tente novamente ou um \emph{push} na tela de previsão para recarregar as previsões;
-    \item Adicionar um tutorial explicando objetivo do aplicativo, como navegar e o significado dos ícones;
+    \item Adicionar um botão de "tente novamente" ou um \emph{push}, na tela de previsão, para recarregar as previsões;
+    \item Adicionar um tutorial, explicando o objetivo do aplicativo, como navegar e o significado dos ícones;
     \item Implementar notificações para lembrar as usuárias do envio de avaliações;
     \item Implementar código de testes no \emph{backend};
-    \item Aumentar a segurança dos dados e
+    \item Aumentar a segurança dos dados, e
     \item Estar de acordo com a Lei Geral de Proteção de Dados Pessoais.
 
 \end{itemize}
 
 \section{Trabalhos Futuros}
 
-Apesar de concluído esse trabalho, a Autora consegue vislumbrar outras oportunidades para trabalho futuros.
+Apesar de concluído esse trabalho, a Autora consegue vislumbrar outras oportunidades para trabalhos futuros.
 
-No universo de ciclo menstrual há a possibilidade de tratar sobre sintomas físicos e emocionais decorrentes 
+No universo de ciclo menstrual, há a possibilidade de tratar sobre sintomas físicos e emocionais decorrentes 
 da flutuação hormonal do ciclo menstrual, além de estabelecer métodos mais criteriosos para determinar 
 algumas fases do ciclo não tratadas nesse trabalho, como a janela do período fértil. Outra possibilidade seria 
-monitorar o tamanho dos ciclos e tratar de ciclos irregulares através de métodos estatisticos para 
+monitorar o tamanho dos ciclos e tratar de ciclos irregulares através de métodos estatísticos para 
 tentar estabelecer de forma mais precisa as fases para esses casos.
 
 Quanto ao sistema de recomendação, é possível implementar algoritmos mais sofisticados para melhorar 
-a precisão das recomendações. Um exemplo seria, com mais dados de usuárias já ativas no sistema pode 
-ser possível utilizar do algoritmo \emph{clustering} para plotar as usuárias em um gráfico e determinar 
+a precisão das recomendações. Um exemplo seria, com mais dados de usuárias já ativas no sistema, 
+utilizar o algoritmo \emph{clustering} para plotar as usuárias em um gráfico, e determinar 
 novos grupos a partir de pontos mais densos encontrados. Isso também possibilitaria o cruzamento com outros 
 metadados que podem ser coletados, como métodos anticoncepcionais, idade, entre outros.
 
 Outro ponto seria a possibilidade de deixar que as usuárias selecionem as tarefas que elas realmente 
-realizam no dia a dia e adicionem novas tarefas não listadas. Outros algoritmos de recomendação teriam 
+realizam no dia a dia, e adicionem novas tarefas não listadas. Outros algoritmos de recomendação teriam 
 que ser desenvolvidos para suportar novos itens ou personalizações pessoais. Nessa mesma linha de pensamento, 
-um algoritmo híbrido poderia ser implementado dando mais peso as pontuações pessoais do que as do grupo.
+um algoritmo híbrido poderia ser implementado dando mais peso às pontuações pessoais do que as do grupo.
 
-Os universos tratados nesse trabalho, tanto sobre o ciclo menstrual quanto sobre o sistem sistema de 
-recomendação são enormes e ainda há muitas possibilidades a serem exploradas no futuro. 
+Os escopos de atuação desse trabalho, tanto sobre o ciclo menstrual, quanto sobre o sistema de recomendação, 
+são enormes, e ainda há muitas possibilidades a serem exploradas no futuro.
