--- a/tcc2/editaveis/metodologia.tex
+++ b/tcc2/editaveis/metodologia.tex
@@ -2,17 +2,17 @@
 \label{ch:metodologia}
 
 Neste capítulo, será apresentada a metodologia utilizada no desenvolvimento dessa 
-monografia. Na seção 4.2, será detalhada a classificação de pesquisa, de acordo com os 
-critérios de abordagem, natureza, objetivos e procedimentos. A seção 4.3 acordará o fluxo 
+monografia. Na seção \ref{41}, será detalhada a classificação de pesquisa, de acordo com os 
+critérios de abordagem, natureza, objetivos e procedimentos. A seção \ref{42} acordará o fluxo 
 das atividades que foram desenvolvidas ao longo do Trabalho de Conclusão de Curso (TCC), considerando duas etapas de dedicação. 
-A seção 4.4 abordará a pesquisa bibliográfica.
-A seção 4.5 focará na metodologia de desenvolvimento. A seção 4.6 permitirá conhecer como foi conduzida 
-a análise de resultados. A seção 4.7 ilustra o cronograma das atividades desenvolvidas ao 
+A seção \ref{43} abordará a pesquisa bibliográfica.
+A seção \ref{44} focará na metodologia de desenvolvimento. A seção \ref{vsf} permitirá conhecer como foi conduzida 
+a análise de resultados. A seção \ref{46} ilustra o cronograma das atividades desenvolvidas ao 
 longo desse trabalho. Por fim, têm-se as considerações finais do capítulo.
 
 
 \section{Classificação da Pesquisa}
-
+\label{41}
 De acordo com \citeonline{gerhardt2009}, a metodologia é o estudo da organização dos 
 caminhos a serem percorridos para se realizar uma pesquisa, um estudo ou para se 
 fazer ciência. No caso de uma pesquisa científica, ela pode ser classificada quanto à 
@@ -70,18 +70,17 @@ de levantamento; survey; estudo de caso;
 participante; pesquisa-ação; etnográfica e etnometodológica.
 
 Essa pesquisa, quanto aos procedimentos, pode ser classificada como: pesquisa bibliográfica e 
-estudo de caso.
-Ela é bibliográfica,tiliza levantamento de referências teóricas já analisadas, 
-como livros e artigos científicos. É estudo de caso, por 
-ser aplicado à comunidade criada pela própria autora, com 
-mulheres com interesse no tema.
+estudo de caso. Trata-se de pesquisa bibliográfica, uma vez que utiliza levantamento de 
+referências teóricas já analisadas, como livros e artigos científicos. Trata-se de estudo de 
+caso, por ser aplicado à comunidade criada pela própria autora, com mulheres com interesse no 
+tema.
 
 
 \section{Fluxo das Atividades}
-
+\label{42}
 O fluxo a seguir foi construído utilizando a notação BPMN, e apresenta 
 tanto as atividades já desenvolvidas ao longo da execução 
-da primeira etapa do TCC, quanto, quanto as desenvolvidas na segunda etapa do TCC. 
+da primeira etapa do TCC, quanto, quanto às desenvolvidas na segunda etapa do TCC. 
 Adicionalmente, os próximos tópicos detalharão de 
 forma mais específica cada atividade desse fluxo.
 
@@ -131,14 +130,14 @@ para guiar a pesquisa, permitindo classificar essa última quanto
 
 \textbf{Definir proposta da aplicação}: delimitou-se o escopo da proposta inicial, obtendo um maior detalhamento 
 dos objetivos gerais e específicos deste trabalho. Gerou como artefato o capítulo Proposta no 
-escopo da primeira etapa. No momento, detallhamento completo do aplicativo encontra-se no capítulo \ref{ch:mina}, Mina.
+escopo da primeira etapa. No momento, o detalhamento completo do aplicativo encontra-se no capítulo \ref{ch:mina}, Mina.
 
 \textbf{Implementar prova de conceito}: implementou-se parte da proposta, desenvolvendo um protótipo e uma aplicação inicial, com o objetivo 
 de avaliar a viabilidade do projeto e das tecnologias escolhidas.
 
 \textbf{Revisar monografia (Etapa 1)}: toda a monografia foi revisada, e as devidas orientações implementadas.
  
-\textbf{Apresentar trabalho (Etapa 1)}: apresentar os resultados conquistados, na primeria etapa 
+\textbf{Apresentar trabalho (Etapa 1)}: apresentar os resultados conquistados, na primeira etapa 
 de realização do trabalho, aos membros da banca.
 
 \textbf{Realizar correções (Etapa 1)}: dada as devidas orientações dos membros da banca, correções 
@@ -161,11 +160,12 @@ realização do trabalho, aos membros da banca.
 serão implementadas no trabalho.
 
 \section{Pesquisa Bibliográfica}
+\label{43}
 
 A pesquisa bibliográfica foi realizada a partir da plataforma do Periódico Capes, utilizando a ferramenta de pesquisa avançada.
 Os temas foram separados em duas partes: influências do ciclo menstrual e sistema de recomendação.
 Para as influências do ciclo menstrual, vale ressaltar que é um tema ainda pouco abordado na literatura, e existem 
-várias discrepâncias entre os estudos. Dessa forma, foram foram selecionados aqueles que apoiavam a tese de que 
+várias discrepâncias entre os estudos. Dessa forma, foram selecionados aqueles que apoiavam a tese de que 
 o ciclo influencia de alguma forma as habilidades cognitivas, motoras e sensoriais. 
 
 A partir do periódico capes, foi utilizada a seguinte \emph{string} de busca:
@@ -185,7 +185,8 @@ de uma conversa com os orientadores, que citaram o trabalho sobre sistema de rec
 
 
 \section{Metodologia de Desenvolvimento}
-\label{vsf}
+\label{44}
+
 No escopo da primeira etapa do TCC, foi utilizado o Kanban para o gerenciamento das tarefas que foram 
 desenvolvidas no decorrer da escrita da monografia, da construção da proposta e do desenvolvimento 
 da prova de conceito.
@@ -226,6 +227,7 @@ o formato proposto pela metodologia (Eu como ... desejo ... para que eu possa ..
 \textbf{Publicar \emph{release}}: ao final de cada \emph{sprint}, se as histórias de usuário foram executadas, uma nova versão da aplicação é lançada. 
 
 \section{Análise de Resultados}
+\label{vsf}
 
 Segundo \citeonline{gil1991}, o estudo de caso é mais utilizado em estudos exploratórios e descritivos, 
 e pode ser importante para fornecer respostas relativas a causas de determinados fenômenos. É definido por sete etapas:
@@ -262,6 +264,8 @@ três questionários para coleta de dados, descritos nos Capítulo 5 e 6.
 Por fim, a preparação do relatório deu-se após a aplicação de cada questionário, acordado na etapa anterior.
 
 \section{Cronograma}
+\label{46}
+
 
 O cronograma da Tabela \ref{tab04} explicita as atividades executadas, 
 com seus respectivos prazos, na primeira etapa do TCC. A Tabela \ref{tab05} explicita as datas 
@@ -320,7 +324,7 @@ mês de março, e o retorno ocorreu no mês de agosto. Algumas atividades contin
 		\midrule
 		\begin{minipage} [t] {0.2\textwidth} \centering Implementar Aplicação \end{minipage} & P & P - E & P - E & P - E  \\
 		\midrule
-		\begin{minipage} [t] {0.2\textwidth} \centering Análisar Resultados \end{minipage} &  &  &P &P - E  \\
+		\begin{minipage} [t] {0.2\textwidth} \centering Analisar Resultados \end{minipage} &  &  &P &P - E  \\
 		\midrule
 		\begin{minipage} [t] {0.2\textwidth} \centering Refinar Monografia \end{minipage} &  &  &  & P - E \\
 		\midrule
