--- a/tcc2/editaveis/proposta.tex
+++ b/tcc2/editaveis/proposta.tex
@@ -55,10 +55,11 @@ específico de pessoas.
 
 
 \section{Coleta de Dados}
+\label{coletadados}
 
-Um grupo com 23 mulheres que se interessaram pelo tema foi criado durante a execuçao da primeira etapa do TCC. 
+Um grupo com 23 mulheres que se interessaram pelo tema foi criado durante a execução da primeira etapa do TCC. 
 As mulheres participantes do grupo são jovens entre 20 a 35 anos, e possuem 
-formação academica ou estão em formação, caracterizando pessoas bem instruídas e com um bom 
+formação acadêmica ou estão em formação, caracterizando pessoas bem instruídas e com um bom 
 nível de acesso à informação.
 
 A primeira atividade com o grupo envolveu discussões de como as colaboradoras se sentiam durante as fases. Foi orientado
@@ -193,27 +194,28 @@ sintomas e tarefas que iriam compor o sistema de recomendação.
 
 Alguns perfis foram identificados a partir do questionário, sendo listados na Tabela \ref{tab09}. 
 Quase todos os perfis têm sintomas durante todas as fases, menos quando se trata da ovulação, porque aquelas 
-que utilizam métodos contraceptivos hormonais não ovulam. As mulheres com distúrbio endócrinos 
-, que não utilizam metodos contraceptivos hormonais, relataram ter ciclos irregulares, o que pode acabar afetando 
+que utilizam métodos contraceptivos hormonais não ovulam. As mulheres com distúrbio endócrinos, 
+que não utilizam métodos contraceptivos hormonais, relataram ter ciclos irregulares, o que pode acabar afetando 
 as recomendações das tarefas, devido à imprecisão em determinar qual fase do ciclo ela se encontra.
 
-\begin{table}[] 
+\begin{table}[ht] 
     \centering
     \caption{Perfis Mapeados}
     \label{tab09} 
-    \begin{tabular}{|l|c|c|c|}
-    \hline
-    \rowcolor[HTML]{C0C0C0} 
-     Perguntas & Perfil 1 & Perfil 2 & Perfil 3  \\ \hline
-     Utiliza método contraceptivo hormonal?& não & não & sim \\ \hline
-    \rowcolor[HTML]{EFEFEF} 
-    Possui distúrbio endócrino? & não & sim & sim/não \\ \hline
-    Ciclo regular? & sim & sim/não & sim/não  \\ \hline
-    \rowcolor[HTML]{EFEFEF} 
-    Sintomas de TPM? & sim & sim & sim \\ \hline
+    \begin{tabular}{cccc}
+    \toprule
+     Perguntas & Perfil 1 & Perfil 2 & Perfil 3  \\ 
+     \midrule     
+     Utiliza método contraceptivo hormonal?& não & não & sim \\ 
+    \midrule     
+    Possui distúrbio endócrino? & não & sim & sim/não \\ 
+    \midrule     
+    Ciclo regular? & sim & sim/não & sim/não  \\ 
+    \midrule     
+    Sintomas de TPM? & sim & sim & sim \\ 
+    \bottomrule
     \end{tabular}
     \end{table}
-
 
 
 \subsection{Segundo Questionário}
@@ -222,7 +224,7 @@ foi possível mapear, de forma generalista, quais tarefas poderiam ser
 recomendadas. Surgiu então a necessidade de ter dados específicos mapeados entre cada perfil para cada tarefa, 
 para cada fase. 
 
-Decidiu-se aplicar mais um questionário especifico para as tarefas.
+Decidiu-se aplicar mais um questionário específico para as tarefas.
 A Tabela \ref{tab10} apresenta as questões que foram utilizadas para o segundo ciclo de coleta 
 de dados sobre o ciclo menstrual e 
 sua influência. As quatro últimas perguntas listavam as tarefas, estudar, trabalhar, exercitar, arrumar a casa, 
@@ -231,7 +233,7 @@ mulheres tinham que responder se essas tarefas são mais fáceis, neutras ou mai
 a depender da fase do ciclo. 
 
 Para esse questionário, as mulheres não passaram por uma preparação prévia, mas a autora esteve disponível o tempo 
-todo para sanar eventuais dúvidas que pudessem surgir. Apesar disso não houve manifestação de difículdade por parte das mulheres 
+todo para sanar eventuais dúvidas que pudessem surgir. Apesar disso, não houve manifestação de dificuldade por parte das mulheres 
 para responder o questionário.
 
 \begin{table}[ht]
@@ -248,21 +250,21 @@ para responder o questionário.
         \midrule
         \begin{minipage} [t] {1\textwidth} Possui ciclo regular? \end{minipage} \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} Apresenta alguma sintoma físico, mudança de humor ou comportamental durante mais ou menos a primeira semana do seu ciclo, quando ocorre a menstruação? (Fase folicular inicial) \end{minipage}  \\
+        \begin{minipage} [t] {1\textwidth} Apresenta algum sintoma físico, mudança de humor ou comportamental durante mais ou menos a primeira semana do seu ciclo, quando ocorre a menstruação? (Fase folicular inicial) \end{minipage}  \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} Apresenta alguma sintoma físico, mudança de humor ou comportamental mais ou menos na segunda semana do seu ciclo, depois que passa a menstruação e ate metade do seu ciclo? (Fase folicular final)\end{minipage}\\
+        \begin{minipage} [t] {1\textwidth} Apresenta algum sintoma físico, mudança de humor ou comportamental mais ou menos na segunda semana do seu ciclo, depois que passa a menstruação e até metade do seu ciclo? (Fase folicular final)\end{minipage}\\
         \midrule
-        \begin{minipage} [t] {1\textwidth} Apresenta alguma sintoma físico, mudança de humor ou comportamental mais ou menos na terceira semana, depois da metade do seu ciclo e antes do período que pode aparecer a TPM ? (Fase lutea inicial)\end{minipage} \\
+        \begin{minipage} [t] {1\textwidth} Apresenta algum sintoma físico, mudança de humor ou comportamental mais ou menos na terceira semana, depois da metade do seu ciclo e antes do período que pode aparecer a TPM ? (Fase lútea inicial)\end{minipage} \\
         \midrule
-        \begin{minipage} [t] {1\textwidth} Apresenta alguma sintoma físico, mudança de humor ou comportamental mais ou menos na ultima semana do seu ciclo, durante o período que pode aparecer sintomas de TPM ? (Fase lutea final)\end{minipage}\\
+        \begin{minipage} [t] {1\textwidth} Apresenta algum sintoma físico, mudança de humor ou comportamental mais ou menos na última semana do seu ciclo, durante o período que pode aparecer sintomas de TPM ? (Fase lútea final)\end{minipage}\\
         \midrule
-        \begin{minipage} [t] {1\textwidth} Durante mais ou menos a primeira semana do seu ciclo, quando ocorre a menstruação, marque que opção correspondente a cada tarefa que parece fazer mais sentido para você. (Fase folicular inicial) \end{minipage}\\
+        \begin{minipage} [t] {1\textwidth} Durante mais ou menos a primeira semana do seu ciclo, quando ocorre a menstruação, marque a opção correspondente a cada tarefa que parece fazer mais sentido para você. (Fase folicular inicial) \end{minipage}\\
         \midrule
-        \begin{minipage} [t] {1\textwidth} Durante mais ou menos a segunda semana do seu ciclo, quando já passou a menstruação e o ciclo esta caminhando para o período fértil, marque que opção correspondente a cada tarefa parece fazer mais sentido para você. (Fase folicular final)\end{minipage}\\
+        \begin{minipage} [t] {1\textwidth} Durante mais ou menos a segunda semana do seu ciclo, quando já passou a menstruação e o ciclo está caminhando para o período fértil, marque a opção correspondente a cada tarefa parece fazer mais sentido para você. (Fase folicular final)\end{minipage}\\
         \midrule
-        \begin{minipage} [t] {1\textwidth} Durante mais ou menos a terceira semana do seu ciclo, quando você ja passou a metade do seu ciclo, sua fase fértil esta acabando e ainda não apresenta sintomas de TPM, marque que opção correspondente a cada tarefa parece fazer mais sentido para você. (Fase lutea inicial) \end{minipage}\\
+        \begin{minipage} [t] {1\textwidth} Durante mais ou menos a terceira semana do seu ciclo, quando você já passou a metade do seu ciclo, sua fase fértil esta acabando e ainda não apresenta sintomas de TPM, marque a opção correspondente a cada tarefa parece fazer mais sentido para você. (Fase lútea inicial) \end{minipage}\\
         \midrule
-        \begin{minipage} [t] {1\textwidth} Durante mais ou menos a quarta semana do seu ciclo, quando você pode ja apresentar alguns sintomas de TPM e antes do inicio do próximo ciclo, marque que opção correspondente a cada tarefa parece fazer mais sentido para você. (Fase lutea final) \end{minipage}\\
+        \begin{minipage} [t] {1\textwidth} Durante mais ou menos a quarta semana do seu ciclo, quando você pode já apresentar alguns sintomas de TPM e antes do início do próximo ciclo, marque a opção correspondente a cada tarefa parece fazer mais sentido para você. (Fase lútea final) \end{minipage}\\
         \bottomrule
     \end{tabular}
 \end{table}
@@ -271,7 +273,7 @@ para responder o questionário.
 O segundo questionário\footnote{segundo questionário : https://forms.gle/CkaFwknXyxz6jVzp8} 
 utilizou a mesma metodologia de aplicação do primeiro.
 Ao todo, o questionário contou com 11 perguntas. Foram recebidas 10 respostas até a 
-data 07/04/2022. Por causa do tempo de demora do desenvolvimento 
+data 07/04/2022. Devido ao tempo de demora do desenvolvimento 
 entre a primeira etapa e a segunda etapa do TCC, o número de mulheres ativas no grupo 
 inicial decaiu um pouco. 
 
@@ -285,143 +287,164 @@ baseado totalmente nas influências relatadas pelo referencial teórico.
 
 As tarefas são divididas entre mais fáceis, neutras ou mais difíceis. As atividades mais fáceis 
 são mais propensas a serem realizadas com uma certa facilidade. As neutras são tarefas em que as mulheres não 
-notaram mudanças significativas. As mais difíceis são tarefas em que as mulheres podem encontrar difículdade 
+notaram mudanças significativas. As mais difíceis são tarefas em que as mulheres podem encontrar dificuldade 
 na execução.
 
 Nas Tabelas \ref{tab11},\ref{tab12},\ref{tab13} e \ref{tab14}, a seta $\uparrow$ indica tarefas mais fáceis; a seta $\downarrow$ indica tarefas mais difíceis, e - indica neutro. As tarefas 
 foram classificadas de acordo com a média de votos das pessoas correspondentes ao perfil. Por exemplo, duas 
-pessoas que não tomam anticoncepcional e não possuem distúrbio endócrino, na fase folicular incial, 
+pessoas que não tomam anticoncepcional e não possuem distúrbio endócrino, na fase folicular inicial, 
 uma votou que escrever é fácil e outra que é difícil, então os pontos empataram, e as tarefas são consideradas neutras.
 Apesar disso, os pontos foram inseridos fielmente ao banco de dado para calibrar os grupos iniciais. Outros detalhes são conferidos
 na seção \ref{sr} deste capítulo.
 
-\begin{table}[]
+\begin{table}[ht]
     \centering
     \caption{Relação de Tarefas Grupo 1}
     \label{tab11}
-    \begin{tabular}{|l|c|c|c|c|}
-    \hline
-    \rowcolor[HTML]{C0C0C0} 
-    \multicolumn{1}{|c|}{\cellcolor[HTML]{C0C0C0}Tarefas recomendadas}  & Folicular Inicial & Folicular Final  & Lútea Inicial& Lútea Final \\ \hline
-    Estudar & $\downarrow$  & - & - & - \\ \hline
-    \rowcolor[HTML]{EFEFEF} 
-    Trabalhar & $\downarrow$ & -  & -&  -  \\ \hline
-    Exercitar & $\downarrow$ & $\uparrow$ & - &  -  \\ \hline
-    \rowcolor[HTML]{EFEFEF} 
-    Arrumar a casa  & $\downarrow$ & -  & - & - \\ \hline
-    Ler & - & -  & - & - \\ \hline
-    \rowcolor[HTML]{EFEFEF} 
-    Fazer reuniões & - & - & - & - \\ \hline
-    \rowcolor[HTML]{EFEFEF} 
-    Socializar & $\downarrow$ & - & $\uparrow$ & - \\ \hline
-    \rowcolor[HTML]{EFEFEF} 
-    Escrever & - & $\uparrow$  & - & - \\ \hline
-    Ouvir música & $\uparrow$ & $\uparrow$ & $\uparrow$ & - \\ \hline
-    \rowcolor[HTML]{EFEFEF} 
-    Assistir séries/Tv & $\uparrow$ & $\uparrow$ & $\uparrow$ & - \\ \hline
-    Desenhar & - & -  & - & - \\ \hline
-    \rowcolor[HTML]{EFEFEF} 
-    Criar & - & $\uparrow$  & - & - \\ \hline
+    \begin{tabular}{lcccc}
+    \toprule
+    Tarefas recomendadas  & Folicular Inicial & Folicular Final  & Lútea Inicial& Lútea Final \\ 
+    \midrule
+    Estudar & $\downarrow$  & - & - & - \\ 
+    \midrule
+    Trabalhar & $\downarrow$ & -  & -&  -  \\ 
+    \midrule
+    Exercitar & $\downarrow$ & $\uparrow$ & - &  -  \\ 
+    \midrule
+    Arrumar a casa  & $\downarrow$ & -  & - & - \\ 
+    \midrule
+    Ler & - & -  & - & - \\ 
+    \midrule
+    Fazer reuniões & - & - & - & - \\ 
+    \midrule
+    Socializar & $\downarrow$ & - & $\uparrow$ & - \\ 
+    \midrule
+    Escrever & - & $\uparrow$  & - & - \\
+    \midrule 
+    Ouvir música & $\uparrow$ & $\uparrow$ & $\uparrow$ & - \\ 
+    \midrule
+    Assistir séries/Tv & $\uparrow$ & $\uparrow$ & $\uparrow$ & - \\ 
+    \midrule
+    Desenhar & - & -  & - & - \\ 
+    \midrule
+    Criar & - & $\uparrow$  & - & - \\ 
+    \bottomrule    
     \end{tabular}
     \end{table}
 
-    \begin{table}[]
+    \begin{table}[ht]
         \centering
         \caption{Relação de Tarefas Grupo 2}
         \label{tab12}
-        \begin{tabular}{|l|c|c|c|c|}
-        \hline
-        \rowcolor[HTML]{C0C0C0} 
-        \multicolumn{1}{|c|}{\cellcolor[HTML]{C0C0C0}Tarefas recomendadas}  & Folicular Inicial & Folicular Final  & Lútea Inicial& Lútea Final \\ \hline
-        Estudar & $\uparrow$  & -  & -  & -  \\ \hline
-        \rowcolor[HTML]{EFEFEF} 
-        Trabalhar & -  & -   & -  &  -   \\ \hline
-        Exercitar & -  & $\uparrow$ & -  &  -  \\ \hline
-        \rowcolor[HTML]{EFEFEF} 
-        Arrumar a casa  & $\uparrow$ & -   & - & - \\ \hline
-        Ler & - & -  & - & - \\ \hline
-        \rowcolor[HTML]{EFEFEF} 
-        Fazer reuniões & - & - & - & - \\ \hline
-        \rowcolor[HTML]{EFEFEF} 
-        Socializar & - & -  & - & - \\ \hline
-        \rowcolor[HTML]{EFEFEF} 
-        Escrever & - & -  & - & - \\ \hline
-        Ouvir música & $\uparrow$ & $\uparrow$ & $\uparrow$ & - \\ \hline
-        \rowcolor[HTML]{EFEFEF} 
-        Assistir séries/Tv & $\uparrow$ & $\uparrow$ &$\uparrow$ & -\\ \hline
-        Desenhar & - & $\uparrow$  & - & - \\ \hline
-        \rowcolor[HTML]{EFEFEF} 
-        Criar & - & -  & - & - \\ \hline
+        \begin{tabular}{lcccc}
+        \toprule
+        Tarefas recomendadas  & Folicular Inicial & Folicular Final  & Lútea Inicial& Lútea Final \\ 
+        \midrule
+        Estudar & $\uparrow$  & -  & -  & -  \\ 
+        \midrule
+        Trabalhar & -  & -   & -  &  -   \\ 
+        \midrule
+        Exercitar & -  & $\uparrow$ & -  &  -  \\ 
+        \midrule
+        Arrumar a casa  & $\uparrow$ & -   & - & - \\ 
+        \midrule
+        Ler & - & -  & - & - \\ 
+        \midrule
+        Fazer reuniões & - & - & - & - \\ 
+        \midrule
+        Socializar & - & -  & - & - \\ 
+        \midrule
+        Escrever & - & -  & - & - \\ 
+        \midrule
+        Ouvir música & $\uparrow$ & $\uparrow$ & $\uparrow$ & - \\ 
+        \midrule
+        Assistir séries/Tv & $\uparrow$ & $\uparrow$ &$\uparrow$ & -\\ 
+        \midrule
+        Desenhar & - & $\uparrow$  & - & - \\ 
+        \midrule
+        Criar & - & -  & - & - \\ 
+        \bottomrule    
         \end{tabular}
         \end{table}
 
 
 
-        \begin{table}[]
+        \begin{table}[ht]
             \centering
             \caption{Relação de Tarefas Grupo 3}
             \label{tab13}
-            \begin{tabular}{|l|c|c|c|c|}
-            \hline
-            \rowcolor[HTML]{C0C0C0} 
-            \multicolumn{1}{|c|}{\cellcolor[HTML]{C0C0C0}Tarefas recomendadas}  & Folicular Inicial & Folicular Final  & Lútea Inicial& Lútea Final \\ \hline
-            Estudar & -  & - & $\uparrow$ & $\downarrow$ \\ \hline
-            \rowcolor[HTML]{EFEFEF} 
-            Trabalhar & - & -  & $\uparrow$ &  $\downarrow$  \\ \hline
-            Exercitar & $\downarrow$ & -& $\uparrow$ &  $\downarrow$  \\ \hline
-            \rowcolor[HTML]{EFEFEF} 
-            Arrumar a casa  & - & -  & - & - \\ \hline
-            Ler & - & -  & - & - \\ \hline
-            \rowcolor[HTML]{EFEFEF} 
-            Fazer reuniões & - & - & -& $\downarrow$ \\ \hline
-            \rowcolor[HTML]{EFEFEF} 
-            Socializar & $\uparrow$ & -  & $\uparrow$ & $\downarrow$ \\ \hline
-            \rowcolor[HTML]{EFEFEF} 
-            Escrever & - & $\uparrow$  & $\uparrow$ & - \\ \hline
-            Ouvir música & - & $\uparrow$  & $\uparrow$  & -\\ \hline
-            \rowcolor[HTML]{EFEFEF} 
-            Assistir séries/Tv & - &  $\uparrow$ &  $\uparrow$ & - \\ \hline
-            Desenhar & -  & $\uparrow$  & $\uparrow$ & - \\ \hline
-            \rowcolor[HTML]{EFEFEF} 
-            Criar & - &  -  &  $\uparrow$ & - \\ \hline
+            \begin{tabular}{lcccc}
+            \toprule
+            Tarefas recomendadas  & Folicular Inicial & Folicular Final  & Lútea Inicial& Lútea Final \\ 
+            \midrule
+            Estudar & -  & - & $\uparrow$ & $\downarrow$ \\ 
+            \midrule
+            Trabalhar & - & -  & $\uparrow$ &  $\downarrow$  \\ 
+            \midrule
+            Exercitar & $\downarrow$ & -& $\uparrow$ &  $\downarrow$  \\ 
+            \midrule
+            Arrumar a casa  & - & -  & - & - \\ 
+            \midrule
+            Ler & - & -  & - & - \\ 
+            \midrule
+            Fazer reuniões & - & - & -& $\downarrow$ \\ 
+            \midrule
+            Socializar & $\uparrow$ & -  & $\uparrow$ & $\downarrow$ \\ 
+            \midrule
+            Escrever & - & $\uparrow$  & $\uparrow$ & - \\ 
+            \midrule
+            Ouvir música & - & $\uparrow$  & $\uparrow$  & -\\ 
+            \midrule
+            Assistir séries/Tv & - &  $\uparrow$ &  $\uparrow$ & - \\ 
+            \midrule
+            Desenhar & -  & $\uparrow$  & $\uparrow$ & - \\ 
+            \midrule
+            Criar & - &  -  &  $\uparrow$ & - \\ 
+            \bottomrule    
             \end{tabular}
             \end{table}
 
-\begin{table}[]
+\begin{table}[ht]
     \centering
     \caption{Relação de Tarefas Grupo 4}
     \label{tab14}
-    \begin{tabular}{|l|c|c|c|c|}
-    \hline
-    \rowcolor[HTML]{C0C0C0} 
-    \multicolumn{1}{|c|}{\cellcolor[HTML]{C0C0C0}Tarefas recomendadas}  & Folicular Inicial & Folicular Final  & Lútea Inicial& Lútea Final \\ \hline
-    Estudar & $\downarrow$  & $\uparrow$ & $\uparrow$ & $\downarrow$ \\ \hline
-    \rowcolor[HTML]{EFEFEF} 
-    Trabalhar & $\downarrow$ & $\uparrow$  & $\uparrow$ &  $\downarrow$  \\ \hline
-    Exercitar & $\downarrow$ & $\uparrow$ & $\uparrow$ &  $\downarrow$  \\ \hline
-    \rowcolor[HTML]{EFEFEF} 
-    Arrumar a casa  & $\downarrow$ & $\uparrow$  & - & - \\ \hline
-    Ler & $\uparrow$ & -  & - & - \\ \hline
-    \rowcolor[HTML]{EFEFEF} 
-    Fazer reuniões & - & $\uparrow$ & $\downarrow$ & $\downarrow$ \\ \hline
-    \rowcolor[HTML]{EFEFEF} 
-    Socializar & $\downarrow$ & $\uparrow$  & $\downarrow$ & $\downarrow$ \\ \hline
-    \rowcolor[HTML]{EFEFEF} 
-    Escrever & - & $\uparrow$  & - & - \\ \hline
-    Ouvir música & - & - & - & $\uparrow$ \\ \hline
-    \rowcolor[HTML]{EFEFEF} 
-    Assistir séries/Tv & $\uparrow$ & - & - & $\uparrow$ \\ \hline
-    Desenhar & $\uparrow$ & $\uparrow$  & - & - \\ \hline
-    \rowcolor[HTML]{EFEFEF} 
-    Criar & - & $\uparrow$  & - & - \\ \hline
+    \begin{tabular}{lcccc}
+    \toprule
+    Tarefas recomendadas  & Folicular Inicial & Folicular Final  & Lútea Inicial& Lútea Final \\ 
+    \midrule
+    Estudar & $\downarrow$  & $\uparrow$ & $\uparrow$ & $\downarrow$ \\ 
+    \midrule
+    Trabalhar & $\downarrow$ & $\uparrow$  & $\uparrow$ &  $\downarrow$  \\ 
+    \midrule
+    Exercitar & $\downarrow$ & $\uparrow$ & $\uparrow$ &  $\downarrow$  \\ 
+    \midrule
+    Arrumar a casa  & $\downarrow$ & $\uparrow$  & - & - \\ 
+    \midrule
+    Ler & $\uparrow$ & -  & - & - \\ 
+    \midrule
+    Fazer reuniões & - & $\uparrow$ & $\downarrow$ & $\downarrow$ \\ 
+    \midrule
+    Socializar & $\downarrow$ & $\uparrow$  & $\downarrow$ & $\downarrow$ \\ 
+    \midrule
+    Escrever & - & $\uparrow$  & - & - \\ 
+    \midrule
+    Ouvir música & - & - & - & $\uparrow$ \\ 
+    \midrule
+    Assistir séries/Tv & $\uparrow$ & - & - & $\uparrow$ \\ 
+    \midrule
+    Desenhar & $\uparrow$ & $\uparrow$  & - & - \\ 
+    \midrule
+    Criar & - & $\uparrow$  & - & - \\ 
+    \bottomrule    
     \end{tabular}
     \end{table}
 
 \section{Requisitos}
+\label{req}
 
 Os requisitos iniciais do aplicativo foram elicitados a partir do primeiro questionário e uma pesquisa realizada 
 com os principais aplicativos sobre ciclo menstrual no mercado.  
-Um \emph{Rich Picture} então foi montado para facilitar a apresentação dos requisitos, conforme ilustrado na Figura \ref{fig08}.
+Um \emph{Rich Picture} foi montado para facilitar a apresentação dos requisitos, conforme ilustrado na Figura \ref{fig08}.
 A partir dessa elicitação, foi possível elaborar um protótipo utilizando o Figma. O protótipo passou por 
 algumas atualizações ao decorrer do desenvolvimento da aplicação.
 
@@ -492,6 +515,7 @@ e uma página informativa (vide Figura \ref{fig11}).
 \end{figure}
 
 \section{Arquitetura}
+\label{arq}
 
 O aplicativo é construído com o \emph{framework} React Native, que gera aplicativos nativos Android e IOS. 
 Ele se comunica com o Firebase Authentication, o qual fornece serviços \emph{backend} para autenticar 
@@ -501,7 +525,7 @@ outros. Na Aplicação, é utilizado para criação de usuário através de e-ma
 pelo Google \emph{sing-in}. A Figura \ref{fig12} ilustra esses participantes.
 
 As credenciais são armazenadas no Firebase, sendo utilizadas para realizar o 
-\emph{login} e a recuperação de senha. Para cada usuário, é gerado um \emph{token} e um numero único, chamado uid, permitindo 
+\emph{login} e a recuperação de senha. Para cada usuário, é gerado um \emph{token} e um número único, chamado uid, permitindo 
 fazer requisições seguras para as funções existentes na \emph{Cloud Functions}, que checam se as credenciais 
 são existentes e válidas.
 
@@ -572,7 +596,7 @@ recomendação que atualiza o grupo ao qual o usuário está mais próximo, bem 
 A Figura \ref{fig15} representa a lógica em mais alto nível de como funciona essa função. Ela recebe 
 um \emph{array} do \emph{frontend} com o \emph{feedback} enviado pelo usuário e qual fase o usuário se encontra. 
 Depois, coleta os dados dos grupos e do usuário do banco de dados, selecionando os dados correspondentes à fase 
-do usuário; soma os pontos ao tipos das tarefas avaliadas pelo usuário; compara os dados das tarefas do usuário 
+do usuário; soma os pontos aos tipos das tarefas avaliadas pelo usuário; compara os dados das tarefas do usuário 
 com os dados dos grupos; calcula o número de inversões para cada grupo; seleciona o grupo com menor 
 número de inversões; avalia se é o primeiro \emph{feedback} do usuário (se sim, adiciona as pontuações do usuário ao grupo correspondente) 
 (caso contrário, avalia se houve mudança no grupo). Em havendo mudança, remove os pontos do usuário do grupo antigo e adiciona ao grupo novo. 
@@ -594,7 +618,7 @@ inversão ocorre se x[i] > x[j] e i<j.
 
 A contagem de inversão foi aplicada no algoritmo utilizando a seguinte lógica. 
 De 12 tarefas, para cada tarefa, 
-há 3 possibilidades: ser mais fácil, neutra ou mais difícil. Para cada grupo, é montado um \emph{array} 
+há três possibilidades: ser mais fácil, neutra ou mais difícil. Para cada grupo, é montado um \emph{array} 
 com as classificações das tarefas, por exemplo, exercitar - difícil, faxinar - neutro, socializar - fácil e assim 
 sucessivamente para as 12 tarefas. A tarefa é considerada a posição do \emph{array} 
 e o tipo dela o valor para comparação (Vide Figura \ref{fig16}).
@@ -647,7 +671,7 @@ algoritmo baseado em memória, por utilizar classificações anteriores do usuá
 \section{Aplicativo}
 
 O aplicativo foi desenvolvido com sucesso, integrando todas as tecnologias citadas nas seções anteriores, e 
-utilizando o metodologia de desenvolvimento estabelecida. Os requisitos acordados no Rich Picture Inicial, bem como no protótipo, também foram respeitados da forma
+utilizando a metodologia de desenvolvimento estabelecida. Os requisitos acordados no Rich Picture Inicial, bem como no protótipo, também foram respeitados da forma
 mais fiél possível.
 
 Tiveram mudanças pontuais em comparação ao que foi estabelecido na primeira etapa do TCC. A tela de avaliação das tarefas e 
@@ -656,7 +680,7 @@ Além disso, houve mudança na forma de inserção de um novo ciclo, agora, disp
 Também foi retirada a parte de previsões de sintomas, já que o objetivo estabelecido é focado na recomendações de 
 tarefas, e não em possíveis sintomas físicos ou mudanças de humor.
 
-Na Figura \ref{fig19}, tem-se as telas de \emph{login} com senha e email; criação de conta com email, nome e senha; 
+Na Figura \ref{fig19}, têm-se as telas de \emph{login} com senha e email; criação de conta com email, nome e senha; 
 \emph{login} utilizando a conta Google, e redefinição de senha.
 
 \begin{figure}[ht]
@@ -668,10 +692,10 @@ Na Figura \ref{fig19}, tem-se as telas de \emph{login} com senha e email; criaç
     \label{fig19}
 \end{figure}
 
-Na Figura \ref{fig20}, tem-se as telas do questionário inicial. Ao todos, são seis perguntas; qual a data da sua 
+Na Figura \ref{fig20}, têm-se as telas do questionário inicial. Ao todo, são seis perguntas; qual a data da sua 
 última menstruação; quanto tempo dura normalmente sua menstruação?; quanto tempo dura normalmente seu ciclo?;
 você considera seu ciclo regular? você utiliza métodos contraceptivos hormonais?; você tem algum distúrbio 
-endócrino como ovário policísticos ou outros?, e vocé possui sintomas de tensão pré menstrual (TPM)? 
+endócrino como ovário policísticos ou outros?, e você possui sintomas de tensão pré menstrual (TPM)? 
 De acordo com as respostas, a usuária será inserida em um grupo inicial.
 
 \begin{figure}[ht]
@@ -683,11 +707,11 @@ De acordo com as respostas, a usuária será inserida em um grupo inicial.
     \label{fig20}
 \end{figure}
 
-Na Figura \ref{fig21}, tem-se as telas com o calendário que informa que fase do ciclo o usuário está através 
-de um estimulo visual com as cores das bolas nas datas e através de um texto. É possível adicionar um novo ciclo 
+Na Figura \ref{fig21}, têm-se as telas com o calendário que informa que fase do ciclo o usuário está através 
+de um estímulo visual com as cores das bolas nas datas e através de um texto. É possível adicionar um novo ciclo 
 clicando no '+', navegar entre as telas do menu, navegar para a tela com um texto sobre a fase e para a tela 
-de recomendação de tarefas ou para o perfil. No perfil é possível responder novamente o questionário ou 
-realizar o logout.
+de recomendação de tarefas ou para o perfil. No perfil, é possível responder novamente o questionário ou 
+realizar o \emph{logout}.
 
 \begin{figure}[ht]
 	\caption{Calendário, Adicionar Novo Ciclo, Sobre a Fase e Perfil}
@@ -699,7 +723,7 @@ realizar o logout.
 \end{figure}
 
 
-Na Figura \ref{fig22} temos as telas de previsão e avaliação. Na tela de avaliação, é possível enviar 
+Na Figura \ref{fig22}, têm-se as telas de previsão e avaliação. Na tela de avaliação, é possível enviar 
 um \emph{feedback} com a avaliação do usuário para as tarefas de acordo com a fase do ciclo. Na tela de 
 previsão, estão as recomendações dadas ao grupo que o usuário melhor se encaixa de acordo com o sistema de recomendação.
 Enquanto o usuário não tiver enviado uma avaliação, a recomendação mostrada será do grupo atribuído quando o 
@@ -724,19 +748,18 @@ dos resultados será descrita no próximo capítulo.
 Neste capítulo, foi descrito o processo da tomada de decisão 
 da ideia para 
 esse trabalho, na seção de considerações iniciais. Na seção 
-de coleta de dados, 
+\ref{coletadados}, 
 foi descrito o processo de definição do aplicativo como 
 plataforma; o primeiro questionário, e o segundo questionário 
-visando a coleta de dados. Na seção de análise de dados, foram 
+visando à coleta de dados. Na seção \ref{vsf2}, foram 
 listados alguns perfis identificados 
 com a análise de dados dos questionários, e classificadas as 
 tarefas que demandam mais ou menos energia 
 para serem executadas, de acordo com os grupos e as fases do ciclo menstrual. 
 Esse processo levou em consideração 
 as respostas dos questionários e a referência bibliográfica. 
-A seção de requisitos trouxe os requisitos elicitados;  
-a versão de um \emph{produto backlog}, e o protótipo de alta fidelidade. 
-Na seção de arquitetura, foram descritos a arquitetura utilizada para desenvolvimento do 
+A seção \ref{req} trouxe os requisitos elicitados, e o protótipo de alta fidelidade. 
+Na seção \ref{arq}, foram descritos a arquitetura utilizada para desenvolvimento do 
 \emph{frontend}, \emph{backend}, e como o algoritmo de recomendação funciona. Por último, 
 mas não menos importante, consta o resultado final do aplicativo Mina com todas as \emph{features} 
 implementadas.
