--- a/tcc2/editaveis/resumo.tex
+++ b/tcc2/editaveis/resumo.tex
@@ -2,7 +2,7 @@
 
     Durante o ciclo menstrual, mulheres passam por várias mudanças hormonais que podem levar a 
     mudanças de humor, comportamento e sintomas físicos. Essas mudanças podem influenciar na 
-    disposiçao para realizar certas tarefas cotidianas. Para 
+    disposição para realizar certas tarefas cotidianas. Para 
     ajudar no autoconhecimento, melhorar a inteligência emocional 
     dessas pessoas, e possibilitar que elas usufruam dos benefícios e lidem com os 
     malefícios 
