--- a/tcc2/editaveis/suporteTecnologico.tex
+++ b/tcc2/editaveis/suporteTecnologico.tex
@@ -1,22 +1,22 @@
 \chapter[Suporte Tecnológico]{Suporte Tecnológico}
 \label{ch:suporte}
 
-Neste capítulo, serão aprensentadas brevemente as ferramentas e tecnologias 
+Neste capítulo, serão apresentadas, brevemente, as ferramentas e tecnologias 
 utilizadas no desenvolvimento do aplicativo, no gerenciamento 
 do projeto, no gerenciamento de configuração, no gerenciamento da 
 escrita e na condução da pesquisa.
 
 
-\section{Desenvolvimento da Aplicação}
+\section{Desenvolvimento do Aplicativo}
 
-Esta seção contemplará as tecnologias que foram e serão ainda utilizadas na construção do 
-código da aplicação.
+Esta seção contemplará as tecnologias que foram utilizadas na construção do 
+código do aplicativo.
 
 \subsection{React Native 0.68}
 
-O React Native \cite{reactNative}, criado pelo Facebook, combina as melhores partes do 
+O React Native \cite{reactNative}, criado pelo Facebook, combina as melhores partes de 
 desenvolvimenta nativo com 
-o \emph{framework} React, uma bibliotéca JavaScript para construir interface de usuário(UI). 
+o \emph{framework} React, uma biblioteca JavaScript para construir interface de usuário(UI). 
 É usada para desenvolver aplicativos para iOS e Android de forma nativa, ou seja, utilizando 
 componentes próprios da plataforma iOS ou Android para construir a aplicação. O React Native 
 possibilita que uma única base de código possa ser utilizada para construir aplicações 
@@ -34,11 +34,11 @@ aplicação \cite{reactNative}.
 
 \subsection{TypeScript 4.4.4}
 
-O TypeScript \cite{typescript} é uma linguagem de programação de códio aberto 
-desenvolvido pela Microsoft. É uma linguagem de programação construida em cima do JavaScript e 
-fortemente tipada. Uma tipagem estátia pode ser usada para descrever a forma de um objeto, isso possibilita 
-uma melhor documentação do código e permite que o TypeScript faça validações para garantir que o código 
-está funcionando de forma adequada.
+O TypeScript \cite{typescript} é uma linguagem de programação de código aberto, desenvolvida 
+pela Microsoft, sendo construída em JavaScript, e fortemente tipada. Uma tipagem estática pode 
+ser usada para descrever a forma de um objeto, o que possibilita uma melhor documentação do 
+código, e permite que o TypeScript faça validações para garantir que o código esteja funcionando 
+de forma adequada.
 
 \subsection{Firebase}
 
@@ -69,17 +69,17 @@ do projeto, tanto na escrita quanto no desenvolvimento da aplicação.
 	relacionadas à escrita do TCC, e também para manter o registro dos artigos utilizados;
     \item \textbf{ZenHub: }é uma ferramenta semelhante ao Trello. É exclusiva para uso junto ao 
 	Github, sendo uma ferramenta adequada, focada em: rastreamento; planejamento e 
-	relatórios das \emph{features} de projetos no GitHub. Ele é baseado nas 
-	metodologias ágeis, como Scrum, e é utilizado em projetos ágeis. Com ele, 
-	é possível planejar roteiros; usar quadros de tarefas e gerar relatórios 
+	relatórios das \emph{features} de projetos no GitHub. O Zenhub é baseado nas 
+	metodologias ágeis, como Scrum, sendo utilizado, portanto, em projetos ágeis. Com ele, 
+	é possível planejar roteiros; usar quadros de tarefas, e gerar relatórios 
 	automatizados diretamente do repositório do GitHub \cite{zenhub2020}. 
-	Nesse projeto, será utilizado para organizar as tarefas relacionadas ao 
-	desenvolvimento do aplicativo proposto, e
+	Nesse projeto, foi utilizado para organizar as tarefas relacionadas ao 
+	desenvolvimento do aplicativo, e
     \item \textbf{Slack: }uma plataforma de comunicação que permite a criação de times e a 
 	organização de canais de conversas por tópicos, grupos privados ou mensagens 
 	diretas. Ele também possui integração com  Google Drive, Trello, Dropbox, Box, 
 	Heroku, IBM Bluemix, Crashlytics, GitHub, entre outros \cite{slack2013}. Nesse 
-	projeto, será utilizado para comunicação entre aluno e orientador.
+	projeto, foi utilizado para comunicação entre aluno e orientador.
 
 \end{itemize}
 
@@ -94,25 +94,27 @@ Esta subseção descreve as ferramentas adotadas para a construção do código 
 	bastante utilizado no desevolvimento de software \cite{vscode2015}. Tem suporte 
 	para várias linguagens, e possui ferramentas importantes que auxiliam no 
 	desenvolvimento de software, como por exemplo: \emph{debugger}, auto completar em 
-	códigos, com sugestões inteligentes, e uma infinidade de extensões que podem ser instaladas para auxiliar ainda mais no desenvolvimento. Será usado como editor de código fonte principal no trabalho;
+	códigos, com sugestões inteligentes, e uma infinidade de extensões que podem ser instaladas 
+	para auxiliar ainda mais no desenvolvimento. Foi usado como editor de código fonte 
+	principal no trabalho;
     \item \textbf{Android Studio 2021.1.1: }ambiente de desenvolvimento para 
-	aplicativos androids oficial do Google. Desenvolvido pelo Google e pela 
+	aplicativos Androids oficial do Google. Desenvolvido pelo Google e pela 
 	JetBrains, o ambiente possui ferramentas como editor de texto, editor de \emph{layout}, 
 	analizador apk, rápidos emuladores, \emph{debugger}, entre outras ferramentas 
-	que auxiliam no desenolvimento de aplicativos \cite{android2020}. Utilizado no 
-	trabalho como emudalor de dispositivos Android;
-    \item \textbf{MacOS: }sistema operacional desenvolvido e distribuido pela empresa Apple
+	que auxiliam no desenvolvimento de aplicativos \cite{android2020}. Utilizado no 
+	trabalho como emulador de dispositivos Android;
+    \item \textbf{MacOS: }sistema operacional desenvolvido e distribuído pela empresa Apple
 	destinado exclusivamente para computadores Mac \cite{apple}. 
-	Será usado como principal sistema operacional nesse trabalho, e
+	Foi usado como principal sistema operacional nesse trabalho, e
 	\item \textbf{Figma: }software para desenvolvimento de protótipos e 
 	criação de projetos que não precisa de instalação, uma vez que está disponível 
 	em nuvem, através de uma página web \cite{figma2020}. Possui \emph{features} para projetos, prototipação, 
 	projetos de sistemas, colaboração e \emph{download}. Os protótipos contam com 
 	interações, transições avançadas com animações inteligentes, GIFs animados, 
 	entre outros. Tais recursos possibilitam uma experiência muito próxima ao mundo 
-	real. Ele permite o compartilhamento rápido do protótipo a outras pessoas e 
-	facilita a contribuição. Nesse trabalho, será utilizado como ferramenta para a 
-	prototipação do aplicativo proposto. 
+	real. Ele permite o compartilhamento rápido do protótipo a outras pessoas, e 
+	facilita a contribuição. Nesse trabalho, foi utilizado como ferramenta para a 
+	prototipação do aplicativo. 
 
 \end{itemize}
 
@@ -127,17 +129,17 @@ Esta subseção descreve as ferramentas adotadas para o versionamento do código
 	eficiência. Ele possibilita a criação de diversas branches que se ramificam e 
 	podem ser editadas, combinadas e removidas sem sofrer perdas de dados. O controle de 
 	versão também possibilita retornar a um momento específico do projeto e observar as 
-	mudanças entre as versões \cite{git2020}. O Git 2.30.1 é utilizado para versionamento de código fonte 
-	do aplicativo a ser desenvolvido nesse trabalho 
+	mudanças entre as versões \cite{git2020}. O Git 2.30.1 foi utilizado para versionamento de código fonte 
+	do aplicativo desenvolvido nesse trabalho 
 	e para a parte escrita do TCC, e
 	\item \textbf{GitHub: }plataforma \emph{online} de desenvolvimento de 
 	software que permite hospedar códigos e utilizar o controle de versão do Git. 
-	Possibilita a revisão de códigos, gerenciamento de projetos, integração continua, 
-	hospedagem, integrações de ferramentas, gerenciamento de equipe, documentação, 
+	Possibilita a revisão de códigos, gerenciamento de projetos, integração contínua, 
+	hospedagem, integração de ferramentas, gerenciamento de equipe, documentação, 
 	hospedagem de código, entre outras funcionalidades. Os repositórios, locais 
-	aonde os projetos são guardados, podem ser fechados ou abertos e possibilitam o 
-	trabalho em equipe \cite{github2020}. Será utilizado como plataforma que hospedará o código, 
-	documentação e monografia do projeto.
+	onde os projetos são guardados, podem ser fechados ou abertos e possibilitam o 
+	trabalho em equipe \cite{github2020}. Foi utilizado como plataforma que hospeda o código, 
+	a documentação e a monografia do projeto.
     
 \end{itemize}
 
@@ -145,14 +147,14 @@ Esta subseção descreve as ferramentas adotadas para o versionamento do código
 
 \subsection{LaTex}
 
-LaTex \cite{latex2020} é um sistema para preparação de documento. Inclui 
+LaTex \cite{latex2020} é um sistema para preparação de documentos. Inclui 
 recursos destinados à produção de documentação técnica e científica. O LaTex é 
-utilizado como padão para comunicação e publicação de documentos científicos, estando 
+utilizado como padrão para comunicação e publicação de documentos científicos, estando 
 disponível como software livre. O LaTex possibilita a composição de artigos de 
 periódicos, relatórios técnicos, livros e apresentações de \emph{slides}, faz 
 o controle automático de seções, referências, tabelas, figuras, notas de rodapé, 
-índices, entre outros e possíbilita a tipografia de fórmulas matemáticas 
-complexas. Neste trabalho, é utilizado localmente, junto ao editor de texto 
+índices, entre outros, e possibilita a tipografia de fórmulas matemáticas 
+complexas. Neste trabalho, foi utilizado localmente, junto ao editor de texto 
 padrão do sistema operacional. O \emph{template} utilizado é o disponibilizado pela 
 Faculdade do Gama no repositório do GitHub \footnote{Repositório do Github com o Template: https://github.com/fga-unb/template-latex-tcc}.
 A versão utilizada foi a TeX Live 2017/Debian.
@@ -161,52 +163,53 @@ A versão utilizada foi a TeX Live 2017/Debian.
 \section{Considerações Finais do Capítulo}
 
 
-Neste capítulo, há uma breve descrição de todas as ferramentas que serão 
+Neste capítulo, há uma breve descrição de todas as ferramentas  
 utilizadas no desenvolvimento do projeto. Um resumo é apresentado na Tabela \ref{tab06}.
 
 No desenvolvimento do aplicativo, foi utilizado o MacOS como sistema 
 operacional; o IntelliJ IDEA como editor de texto; o Android Studio como 
-o emulador de dispositivos Android e o XCode como emulados de dispositivos IOS. 
+o emulador de dispositivos Android, e o XCode como emulador de dispositivos IOS. 
 
-Na aplicação, foi utilizado o React Native 
+No aplicativo, foi utilizado o React Native 
 como \emph{framework} para criação de aplicativos nativos; o TypeScript como linguagem 
 de programação, utilizada com o React Native; o Firebase Authetication para controle de acesso; 
 o Firestore, também do Firebase, como banco de dados não relacional; o Cloud Functions, também do Firebase,
-como serviço \emph{backend} e o Javascript 
+como serviço \emph{backend}, e o Javascript 
 como linguagem de programação \emph{backend}.
 
 As partes envolvendo o código, documentação e escrita do trabalho estão disponíveis 
 em um repositório do Github que utiliza o Git para controle de versão.
 
 O gerenciamento das tarefas referentes ao desenvolvimento do aplicativo foi realizado através do Zenhub, 
-aplicativo disponível como extensão para o Github, 
-e o Trello foi utilizado para o gerenciamento das tarefas do referentes a escrita do TCC1 e TCC2 e 
+aplicativo disponível como extensão para o Github. O 
+Trello foi utilizado para o gerenciamento das tarefas do referentes à escrita do TCC e 
 rastreamento dos artigos. 
 
-A escrita do TCC foi realizada utilizando o LaTex com base em um \emph{template} 
+A escrita do TCC foi realizada utilizando o LaTex, com base em um \emph{template} 
 disponibilizado pela Faculdade do Gama em um repositório do GitHub. 
 
 
-\begin{table}[]
+\begin{table}[ht]
 	\centering
     \caption{Suporte Tecnológico}
-\label{tab06}
-\begin{tabular}{|c|c|c|c}
-\cline{1-3}
-\cellcolor[HTML]{C0C0C0}Tecnologia                                                                                                                                                                   & \cellcolor[HTML]{C0C0C0}Utilização                                    & \cellcolor[HTML]{C0C0C0}Versão &  \\  \cline{1-3}
-\begin{minipage} [t] {0.3\textwidth} \centering  React Native \end{minipage}                     	& \begin{minipage} [t] {0.4\textwidth} \centering \emph{Framework} para criação de aplicativos nativos. \end{minipage}	 & \begin{minipage} [t] {0.2\textwidth} \centering  0.68 \end{minipage}  &  \\  \cline{1-3}
-\cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.3\textwidth} \centering  TypeScript \end{minipage}  & \cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.4\textwidth} \centering  Linguagem de programação.     \end{minipage}  & \cellcolor[HTML]{EFEFEF} \begin{minipage} [t] {0.2\textwidth} \centering  4.4.4 \end{minipage} &  \\  \cline{1-3}
-\begin{minipage} [t] {0.3\textwidth} \centering  Firebase  \end{minipage}                        & \begin{minipage} [t] {0.4\textwidth} \centering  Banco de dados, autenticação e funções.  \end{minipage}                   & \begin{minipage} [t] {0.2\textwidth} \centering  - \end{minipage} &  \\  \cline{1-3}
-\cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.3\textwidth} \centering  Zenhub  \end{minipage} & \cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.4\textwidth} \centering  Gerenciamento de tarefas relacionadas ao desenvolvimento da aplicação.  \end{minipage}  & \cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.2\textwidth} \centering  - \end{minipage} &  \\  \cline{1-3}
-\begin{minipage} [t] {0.3\textwidth} \centering Trello  \end{minipage}  	& \begin{minipage} [t] {0.4\textwidth} \centering Gerenciamento de tarefas relativas ao desenvolvimento dos TCCs e registro de artigos. \end{minipage}	 & \begin{minipage} [t] {0.2\textwidth} \centering  - \end{minipage} &  \\  \cline{1-3}
-\cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.3\textwidth} \centering  Slack \end{minipage}    &\cellcolor[HTML]{EFEFEF} \begin{minipage} [t] {0.4\textwidth} \centering  Comunicação com os orientadores. \end{minipage}        & \cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.2\textwidth} \centering  - \end{minipage} &  \\  \cline{1-3}
-\begin{minipage} [t] {0.3\textwidth} \centering  Visual Studio Code \end{minipage}  	& \begin{minipage} [t] {0.4\textwidth} \centering Ambiente de desenvolvimento. \end{minipage}	 & \begin{minipage} [t] {0.2\textwidth} \centering  1.63.2 \end{minipage}  &  \\ \cline{1-3}
-\cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.3\textwidth} \centering  Android Studio  \end{minipage} & \cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.4\textwidth} \centering  Geração de dispositivos virtuais android. \end{minipage}  & \cellcolor[HTML]{EFEFEF} \begin{minipage} [t] {0.2\textwidth} \centering  2021.1.1 \end{minipage} &  \\ \cline{1-3}
-\begin{minipage} [t] {0.3\textwidth} \centering  MacOS \end{minipage}                & \begin{minipage} [t] {0.4\textwidth} \centering  Sistema operacional.      \end{minipage}                   & \begin{minipage} [t] {0.2\textwidth} \centering  - \end{minipage}                              &  \\ \cline{1-3}
-\cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.3\textwidth} \centering  Figma  \end{minipage} & \cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.4\textwidth} \centering  Prototipação. \end{minipage}  & \cellcolor[HTML]{EFEFEF} \begin{minipage} [t] {0.2\textwidth} \centering  - \end{minipage} &  \\ \cline{1-3}
-\begin{minipage} [t] {0.3\textwidth} \centering Git \end{minipage} 	& \begin{minipage} [t] {0.4\textwidth} \centering Controle de versão de código e escrita dos TCCs. \end{minipage}	 & \begin{minipage} [t] {0.2\textwidth} \centering  2.30.1 \end{minipage}  &  \\ \cline{1-3}
-\cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.3\textwidth} \centering  \end{minipage} & \cellcolor[HTML]{EFEFEF}\begin{minipage} [t] {0.4\textwidth} \centering  Repositório da aplicação e TCCs.   \end{minipage}  & \cellcolor[HTML]{EFEFEF} \begin{minipage} [t] {0.2\textwidth} \centering - \end{minipage} &  \\ \cline{1-3}
-\begin{minipage} [t] {0.3\textwidth} \centering  LaTex \end{minipage}   & \begin{minipage} [t] {0.4\textwidth} \centering  Edição de texto.  \end{minipage}  & \begin{minipage} [t] {0.2\textwidth} \centering  - \end{minipage} &  \\ \cline{1-3}
-
+	\label{tab06}
+	\begin{tabular}{ccc}
+	\toprule
+	Tecnologia & Utilização  & Versão   \\  
+	\midrule
+	\begin{minipage} [t] {0.3\textwidth} \centering  React Native \end{minipage}                     	& \begin{minipage} [t] {0.4\textwidth} \centering \emph{Framework} para criação de aplicativos nativos. \end{minipage}	 & \begin{minipage} [t] {0.2\textwidth} \centering  0.68 \end{minipage}   \\  
+\midrule	\begin{minipage} [t] {0.3\textwidth} \centering  TypeScript \end{minipage}  & \begin{minipage} [t] {0.4\textwidth} \centering  Linguagem de programação.     \end{minipage}  &  \begin{minipage} [t] {0.2\textwidth} \centering  4.4.4 \end{minipage} \\  
+\midrule	\begin{minipage} [t] {0.3\textwidth} \centering  Firebase  \end{minipage}                        & \begin{minipage} [t] {0.4\textwidth} \centering  Banco de dados, autenticação e funções.  \end{minipage}                   & \begin{minipage} [t] {0.2\textwidth} \centering  - \end{minipage}  \\  
+\midrule	\begin{minipage} [t] {0.3\textwidth} \centering  Zenhub  \end{minipage} & \begin{minipage} [t] {0.4\textwidth} \centering  Gerenciamento de tarefas relacionadas ao desenvolvimento da aplicação.  \end{minipage}  & \begin{minipage} [t] {0.2\textwidth} \centering  - \end{minipage}  \\  
+\midrule	\begin{minipage} [t] {0.3\textwidth} \centering Trello  \end{minipage}  	& \begin{minipage} [t] {0.4\textwidth} \centering Gerenciamento de tarefas relativas ao desenvolvimento dos TCCs e registro de artigos. \end{minipage}	 & \begin{minipage} [t] {0.2\textwidth} \centering  - \end{minipage}  \\  
+\midrule	\begin{minipage} [t] {0.3\textwidth} \centering  Slack \end{minipage}    & \begin{minipage} [t] {0.4\textwidth} \centering  Comunicação com os orientadores. \end{minipage}        & \begin{minipage} [t] {0.2\textwidth} \centering  - \end{minipage}  \\  
+\midrule	\begin{minipage} [t] {0.3\textwidth} \centering  Visual Studio Code \end{minipage}  	& \begin{minipage} [t] {0.4\textwidth} \centering Ambiente de desenvolvimento. \end{minipage}	 & \begin{minipage} [t] {0.2\textwidth} \centering  1.63.2 \end{minipage}  \\ 
+\midrule	\begin{minipage} [t] {0.3\textwidth} \centering  Android Studio  \end{minipage} & \begin{minipage} [t] {0.4\textwidth} \centering  Geração de dispositivos virtuais android. \end{minipage}  &  \begin{minipage} [t] {0.2\textwidth} \centering  2021.1.1 \end{minipage}  \\ 
+\midrule	\begin{minipage} [t] {0.3\textwidth} \centering  MacOS \end{minipage}                & \begin{minipage} [t] {0.4\textwidth} \centering  Sistema operacional.      \end{minipage}                   & \begin{minipage} [t] {0.2\textwidth} \centering  - \end{minipage}                               \\ 
+\midrule	\begin{minipage} [t] {0.3\textwidth} \centering  Figma  \end{minipage} & \begin{minipage} [t] {0.4\textwidth} \centering  Prototipação. \end{minipage}  &  \begin{minipage} [t] {0.2\textwidth} \centering  - \end{minipage}  \\ 
+\midrule	\begin{minipage} [t] {0.3\textwidth} \centering Git \end{minipage} 	& \begin{minipage} [t] {0.4\textwidth} \centering Controle de versão de código e escrita dos TCCs. \end{minipage}	 & \begin{minipage} [t] {0.2\textwidth} \centering  2.30.1 \end{minipage}   \\ 
+\midrule	\begin{minipage} [t] {0.3\textwidth} \centering  \end{minipage} & \begin{minipage} [t] {0.4\textwidth} \centering  Repositório da aplicação e TCCs.   \end{minipage}  &  \begin{minipage} [t] {0.2\textwidth} \centering - \end{minipage}  \\ 
+\midrule	\begin{minipage} [t] {0.3\textwidth} \centering  LaTex \end{minipage}   & \begin{minipage} [t] {0.4\textwidth} \centering  Edição de texto.  \end{minipage}  & \begin{minipage} [t] {0.2\textwidth} \centering  - \end{minipage}   \\ 
+	\bottomrule
 \end{tabular}
 \end{table}
