--- a/tcc2/editaveis/informacoes.tex
+++ b/tcc2/editaveis/informacoes.tex
@@ -16,6 +16,6 @@
 \cdu{02:141:005.6}
 
 % Dados da aprovação do trabalho
-\dataDaAprovacao{06 de maio de 2022}
+\dataDaAprovacao{06 de Maio de 2022}
 \membroConvidadoUm{Prof. Dr. Maurício Serrano}
 \membroConvidadoDois{Profª. Drª. Fabiana Freitas Mendes}
